--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,25 @@
   text-decoration: none;
 }
 
+.event-details h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 10px;
+}
+.event-details div {
+  margin: 20px 0;
+}
+.event-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+
+
 
 
 
