--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@
   text-align: left;
   display: block;
 }
+.timePicker {
+  text-align: left;
+  display: block;
+}
 
 .form input {
   width: 100%;
@@ -63,6 +67,26 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
+.home {
+  display: grid;
+  grid-template-columns: 100px 484px;
+  grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+  gap: 5px;
+  background-color: #2196F3;
+  padding: 5px;
+}
+
+.home > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding:20px 0;
+  font-size: 30px;
+}
+
+
+
+
 
 .event_preview {
   padding: 10px 16px;
