--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #f1356d;
+  color: #EB6440;
  
 }
 .navbar .links {
@@ -27,7 +27,7 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #f1356d;
+  color: #EB6440;
 }
 .content {
   max-width: 80%;
@@ -66,7 +66,7 @@
 }
 
 .form button {
-  background: #DC4731;
+  background: #EB6440;
   color: #fff;
   border: 0;
   padding: 8px;
@@ -181,10 +181,10 @@
 
 .event-details h2 {
   font-style: italic;
-  color: #f1356d;
+  color: #EB6440;
 }
 .event-details button {
-  background: #f1356d;
+  background: #EB6440;
   color: #fff;
   border: 0;
   padding: 8px;
@@ -193,13 +193,15 @@
 }
 
 
-
+.checkbox input {
+  transform: scale(2);
+}
 
 .checkbox span {
   font-style: italic;
   
   font-size: 40px;
-  color: #f1356d;
+  color: #EB6440;
   margin-bottom: 10px;
   padding-left: 2%;
 }
@@ -210,7 +212,7 @@
 }
 .add-ons button {
   
-  background: #DC4731;
+  background: #EB6440;
   color: #fff;
   border: 0;
   padding: 8px;
